# Sovereign-Network-Mobile

./: .detoxrc.json  .env.example  .gitattributes  .gitignore  .npmrc  App.tsx  DOMAIN_IMPLEMENTATION_SUMMARY.md  DOMAIN_REGISTRATION_IMPLEMENTATION.md  FILES_CREATED.md  NATIVE_MIGRATION_PLAN.md  NATIVE_SETTINGS_GUIDE.md  README.md  SECURITY_ASSESSMENT_REPORT.md  SECURITY_ASSESSMENT_SUMMARY.txt  SECURITY_REMEDIATION_ROADMAP.md  android.sh  app.json  build_scripts.txt  dns-records-thesovereignnetwork.org.txt  index.js  jest.config.js  jest.e2e.config.js  package-lock.json  package.json  react-native.config.js  sonar-project.properties  vitest.config.ts
.expo/prebuild/: cached-packages.json
.github/: CHECKLIST.md  PLAY_STORE_SETUP.md  REPO_DEPENDENCIES.md  setup-secrets.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: play-store-release.yml
__tests__/: App.test.tsx  setup.ts
__tests__/hooks/: useAsyncData.test.ts  useDebounce.test.ts  usePersistedState.test.ts
__tests__/i18n/: i18n.test.ts  useTranslation.test.ts
__tests__/pouw/: PoUWBridge.test.ts
__tests__/screens/: EnhancedWalletScreen.test.tsx  IdentityScreen.test.tsx  IdentitySettingsScreen.test.tsx  ProfileEditScreen.test.tsx
__tests__/services/: MockAuthService.test.ts  MockDataService.test.ts  RealAuthService.test.ts
__tests__/utils/: colors.test.ts  dates.test.ts  numbers.test.ts
android/: build-with-tmpdir.bat  build.gradle  gradle.properties  local.properties.template  settings.gradle
android/app/src/main/rust/quic-jni/: Cargo.toml  build-android.ps1  build-android.sh
android/app/src/main/rust/quic-jni/.cargo/: config.toml
android/app/src/main/rust/quic-jni/src/: identity_bridge.rs  identity_jni.rs  lib.rs  lobby_auth_jni.rs  messaging_jni.rs  quic_client.rs  quic_session_jni.rs  uhp_quinn.rs  zhtp_auth.rs  zhtp_auth_request.rs  zhtp_codec.rs  zhtp_framing.rs  zhtp_request.rs  zhtp_types.rs
docs/: ARCHITECTURE_ANALYSIS.md  ATOMIC_ITEMS_SPEC.md  CLAUDE.md  EXTENDED_FOUNDATION_SUMMARY.md  FOUNDATION_QUICK_START.md  IMPLEMENTATION_PLAN.md  LIBOQS_FFI_IMPLEMENTATION_PLAN.md  LIBOQS_FILES_MANIFEST.md  LIBOQS_IMPLEMENTATION_SUMMARY.md  LIBOQS_USAGE_GUIDE.md  NATIVE_SETTINGS_GUIDE.md  POUW_IMPLEMENTATION_PLAN.md  QUIC.md  QUIC_DEBUG_POSTMORTEM.md  QUIC_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  RELEASE_DEPLOYMENT.md  RELEASE_NOTES.md  SCREENS_ANALYSIS.md  SCREENS_ANALYSIS_INDEX.md  SCREENS_DIRECTORY_STRUCTURE.md  SECURITY_ASSESSMENT_REPORT.md  SECURITY_QUICK_REFERENCE.md  SECURITY_REMEDIATION_ROADMAP.md  WEB4_CLIENT_ARCHITECTURE.md  impl-plan.md  lib-client-integration-guide.md
e2e/: init.ts
ios/: DebugPrint.swift  GoogleService-Info.plist  IdentityHandleStore.swift  LobbyAuth.swift  Messaging.swift  NativeIdentityProvisioning.m  NativeIdentityProvisioning.swift  NativeIdentityProvisioningModule+Domain.swift  NativeLobbyAuth.m  NativeLobbyAuth.swift  NativeMessaging.m  NativeMessaging.swift  NativePoUW.m  NativeQuicModule.m  NativeQuicModule.swift  NativeQuicSession.m  NativeQuicSession.swift  NativeSettings.m  NativeSettings.swift  NativeZhtpApi.swift  NativeZhtpApiModule.m  Podfile  QuicSession.swift  RCTPoUW.swift  SovereignNetworkMobile-Bridging-Header.h  UhpHandshake.swift  UhpIdentityProvisioning.swift  WalletKeychain.m  WalletKeychain.swift  Web4BlobCache.swift  Web4Client.swift  Web4ManifestCache.swift  Web4Runtime.swift  Web4SchemeHandler.swift  Web4Types.swift  Web4View.swift  Web4ViewManager.m  Web4ViewManager.swift  ZhtpAuth.swift  ZhtpAuthRequest.swift  (+5 more)
ios/quinn-ffi/: Cargo.toml
ios/quinn-ffi/src/: lib.rs
ios/uhp-ffi/: Cargo.toml  build-ios.sh  build-xcframework.sh  uhp_ffi.podspec
ios/uhp-ffi/include/: uhp_ffi.h
ios/uhp-ffi/src/: lib.rs
patches/: lib-client-ios-ffi.patch
plans/: dashboard-snap-scroll-plan.md  frontend-refactoring-plan.md
scripts/: build-lib-client-ios.sh  build-liboqs-ios.sh  bump-version.sh  generate-config.js  pre_release_check.sh  security_audit.sh  setup-env.sh
src/: config.ts
(+324 files in other folders)
