[package]
name = "quinn-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0"
libc = "0.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "io-util", "time"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
sha2 = "0.10"
x509-parser = "0.16"
serde_json = "1.0"
hex = "0.4"

lib-network = { path = "../../../The-Sovereign-Network/lib-network", default-features = false, features = ["handshake-only"] }
lib-identity = { path = "../../../The-Sovereign-Network/lib-identity" }
lib-crypto = { path = "../../../The-Sovereign-Network/lib-crypto" }
