[package]
name = "quic-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Quinn for QUIC - pure Rust, easier cross-compilation
quinn = "0.11"
# Rustls for TLS with ring (no aws-lc-sys / cmake dependency)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-platform-verifier = "0.3"
webpki-roots = "0.26"
# JNI bindings for Android
jni = { version = "0.21", default-features = false }
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
# URL parsing
url = "2.5"
# Logging
log = "0.4"
android_logger = "0.13"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# For JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
