[package]
name = "quic-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Quinn for QUIC - pure Rust, easier cross-compilation
quinn = "0.11"
# Rustls for TLS with ring (no aws-lc-sys / cmake dependency)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-platform-verifier = "0.3"
webpki-roots = "0.26"
# JNI bindings for Android
jni = { version = "0.21", default-features = false }
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
# URL parsing
url = "2.5"
# Logging
log = "0.4"
android_logger = "0.13"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# For JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CBOR serialization (for ZHTP protocol)
ciborium = "0.2"
# Blake3 hashing for ZHTP authentication
blake3 = "1.5"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
hmac = "0.12"
x509-parser = "0.16"
once_cell = "1.19"
hex = "0.4"
base64 = "0.22"

# UHP handshake dependencies - use The-Sovereign-Network versions for consistency with lib-client
lib-network = { path = "../../../../../../../The-Sovereign-Network/lib-network" }
lib-identity = { path = "../../../../../../../The-Sovereign-Network/lib-identity" }
lib-crypto = { path = "../../../../../../../The-Sovereign-Network/lib-crypto" }
lib-blockchain = { path = "../../../../../../../The-Sovereign-Network/lib-blockchain" }
zhtp_client = { package = "lib-client", path = "../../../../../../../The-Sovereign-Network/lib-client" }

[profile.release]
lto = true
opt-level = "z"
strip = true
